--- a/app/simple_app/templates/simple_app/index.html
+++ b/app/simple_app/templates/simple_app/index.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index</title>
-  <script src={% static "htmx.min.js" %} ></script>
+  <script src="{% static 'htmx.min.js' %}" ></script>
+  <script src="{% static 'ext/ws.js' %}" ></script>
 </head>
 <body>
   <h1>Hello Django!</h1>
+  <div hx-ext="ws" ws-connect="/ws/echo/">
+    <h2 id="welcome"></h2>
+  </div>
 </body>
 </html>
